documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32.H

typedef void VOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

L71W32API LISTADDR __stdcall L71_BCCreateListEx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);

L71W32API LISTADDR __stdcall L71_BCCreateListExx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);

L71W32API MSGADDR __stdcall L71_BCCreateMsg(ULONG configval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);

L71W32API MSGADDR __stdcall L71_BCGetMsg(INT index,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedAgain(SCHNDX index,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedBranch(USHORT condition,SCHNDX destindex,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedBranchDin0(SCHNDX destindex,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedBranchDin1(SCHNDX destindex,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedBranchEx(USHORT condition1,USHORT condition2,USHORT condition3,SCHNDX destindex,HCARD handleval);

L71W32API ERRVAL __stdcall L71_BCSchedBuild(USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT freq,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedCall(SCHNDX destindex,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedCallCond(USHORT condition,SCHNDX destindex,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedCallCondEx(USHORT condition1,USHORT condition2,USHORT condition3,SCHNDX destindex,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedEntry(HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedFrame(ULONG timeval,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedFrameEnd(HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedFrameStart(ULONG timeval,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedGap(USHORT gapval,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedGoto(SCHNDX destindex,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedHalt(HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedInt(USHORT tagval,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedIntCond(USHORT condition,USHORT tagval,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedIntCondEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT tagval,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedMsg(MSGADDR msgaddr,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedNop(HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedPause(HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedPulse(HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedPulse0(HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedPulse1(HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedRestart(HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedRetry(USHORT condition,USHORT retries,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedRetryEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT retryflag,USHORT retries,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedReturn(HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSchedUser(ULONG useraddr,HCARD handleval);

L71W32API SCHNDX __stdcall L71_BCSetEntry(HCARD handleval);

L71W32API ERRVAL __stdcall L71_BCSetTimeout(USHORT timeoutval,HCARD handleval);

L71W32API ULONG __stdcall L71_BlkAddr(INT taval,HCARD handleval);

L71W32API USHORT __stdcall L71_BlkOptRd(INT taval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_BlkOptWr(USHORT rtopt,INT taval,HCARD handleval);

L71W32API ULONG __stdcall L71_BlkPtrRd(INT taval,HCARD handleval);

L71W32API VOID __stdcall L71_BlkPtrWr(ULONG descaddr,INT taval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_BlkRd(LPUSHORT block,INT taval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_BlkReset(INT taval,HCARD handleval);

L71W32API USHORT __stdcall L71_BlkSWDRd(INT taval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_BlkSWDWr(USHORT swdval,INT taval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_BlkWipe(HCARD handleval);

L71W32API ERRVAL __stdcall L71_BlkWr(LPUSHORT block,INT taval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_CardBoot(HCARD handleval);

L71W32API ERRVAL __stdcall L71_CardCloseAll(VOID);

L71W32API ERRVAL __stdcall L71_CardConfig(BOOL enableflag,USHORT command,USHORT taval,HCARD handleval);

L71W32API ULONG __stdcall L71_CardGetInfo(USHORT infotype,HCARD handleval);