documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.CS

        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCCreateListEx@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_BCCreateListEx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, UInt16 cwd1, UInt16 cwd2, ref UInt16 data, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCCreateListExx@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_BCCreateListExx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, UInt16 cwd1, UInt16 cwd2, ref UInt16 data, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCCreateMsg@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_BCCreateMsg(UInt32 configval, UInt16 cwd1, UInt16 cwd2, ref UInt16 data, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCGetMsg@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_BCGetMsg(Int32 index, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedAgain@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedAgain(Int32 index, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedBranch@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedBranch(UInt16 condition, Int32 destindex, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedBranchDin0@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedBranchDin0(Int32 destindex, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedBranchDin1@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedBranchDin1(Int32 destindex, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedBranchEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedBranchEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, Int32 destindex, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedBuild@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedBuild(UInt16 nummsgs, ref UInt32 msgaddr, ref UInt16 freq, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedCall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedCall(Int32 destindex, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedCallCond@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedCallCond(UInt16 condition, Int32 destindex, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedCallCondEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedCallCondEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, Int32 destindex, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedEntry@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedEntry(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedFrame@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedFrame(UInt32 timeval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedFrameEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedFrameEnd(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedFrameStart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedFrameStart(UInt32 timeval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedGap@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedGap(UInt16 gapval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedGoto@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedGoto(Int32 destindex, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedHalt@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedHalt(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedInt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedInt(UInt16 tagval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedIntCond@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedIntCond(UInt16 condition, UInt16 tagval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedIntCondEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedIntCondEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 tagval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedMsg@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedMsg(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedNop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedNop(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedPause@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedPause(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedPulse@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedPulse(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedPulse0@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedPulse0(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedPulse1@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedPulse1(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedRestart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedRestart(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedRetry@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedRetry(UInt16 condition, UInt16 retries, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedRetryEx@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedRetryEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 retryflag, UInt16 retries, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedReturn@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedReturn(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSchedUser@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSchedUser(UInt32 useraddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSetEntry@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSetEntry(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BCSetTimeout@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BCSetTimeout(UInt16 timeoutval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BlkAddr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_BlkAddr(Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BlkOptRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_BlkOptRd(Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BlkOptWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BlkOptWr(UInt16 rtopt, Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BlkPtrRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_BlkPtrRd(Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BlkPtrWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_BlkPtrWr(UInt32 descaddr, Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BlkRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BlkRd(ref UInt16 block, Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BlkReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BlkReset(Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BlkSWDRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_BlkSWDRd(Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BlkSWDWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BlkSWDWr(UInt16 swdval, Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BlkWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BlkWipe(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_BlkWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_BlkWr(ref UInt16 block, Int32 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardBoot@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardBoot(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardCloseAll@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardCloseAll();
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardConfig(Int32 enableflag, UInt16 command, UInt16 taval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardGetInfo@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_CardGetInfo(UInt16 infotype, UInt32 handleval);
